--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ $(document).ready(function () {
   <a href="kayden.html">Kayden</a>
 </li>
 <li>
-  <a href="leah.html">leah</a>
+  <a href="Leah.html">Leah</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
