edit home and kayden

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index</title>
+<title>index.knit</title>
 
 <script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -263,14 +263,27 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">index</h1>
 
 </div>
 
 
-<div id="r-markdown" class="section level2">
-<h2>R Markdown</h2>
-<p>HOMEPAGE</p>
+<div id="collaborative-website-for-ntres-6100" class="section level1">
+<h1>Collaborative Website for NTRES 6100</h1>
+<div id="assignment-3-collaborators" class="section level3">
+<h3>Assignment 3 Collaborators:</h3>
+<ul>
+<li><a href="https://github.com/kaydennasworthy">Kayden
+Nasworthy</a></li>
+<li><a href="https://github.com/leahesimon">Leah Simon</a></li>
+</ul>
+<p><br/></p>
+<div class="figure">
+<img
+src="https://img.freepik.com/free-vector/hand-drawn-science-education-background_23-2148499325.jpg"
+alt="" />
+<p class="caption">Fancy science</p>
+</div>
+</div>
 </div>
 
 
